# cmake_examples

./: .gitignore  01.git-clean-list.bat  02.git-clean-exec.bat
_my_sample/: 01.gen-x64.bat  01.gen.bat  01.gen_vc2015.bat  02.run.bat  CMakeLists.txt  main.cpp
boost_sample/: CMakeLists.txt  build.bat  main.cpp
cppcli_sample/: build.bat  main.cpp
enumRes1/: CMakeLists.txt  enumRes1.cpp
java_sample/: 01.generate.bat  02.build-run.bat  build.bat
java_sample/src/: CMakeLists.txt  HelloWorld.java
multi_exe_sample/: CMakeLists.txt  app2.cpp  build.bat  unicode_dummy.cpp
opencv_sample/: CMakeLists.txt  build.bat  cvwin.cpp  cvwin.h  cvwin.hpp  main1.cpp  main2.cpp  main3.cpp
swig_sample/: 01.gen.bat  02A.build-c++(vc2013).bat  02A.build-c++(vc2013-x64).bat  02A.build-c++(vc2015).bat  02B.build-c++(mingw).bat  03.build-java.bat  99.build-java-2.bat
swig_sample/c++/: CMakeLists.txt  ResultClass.cpp  ResultClass.h  SwigClass.cpp  SwigClass.h  char_vector_as_array.i  dllmain.cpp  mydll.i  std_string_as_array.i  std_wstring.i  swig_string_array.i  swig_vector.i  vector.i  vector_bytearray.h
swig_sample/java/: CMakeLists.txt
swig_sample/java/swigtest1/: NativeUtils.java  SwigTest1.java
wxwidgets_sample/: CMakeLists.txt  build.bat  enumRes1.cpp  winapp.cpp
